changed classes to avoid content text overlapping

--- a/kalite/distributed/static/css/distributed/bootstrap-overrides.less
+++ b/kalite/distributed/static/css/distributed/bootstrap-overrides.less
@@ -410,14 +410,6 @@ form .input-group {
   text-align: center;
 }
 
-.content-explore-topic .row div.col-xs-5{
-  width: 100%;
-}
-
-.content-explore-topic .row div.col-xs-7{
-  width: 100%;
-}
-
 #content-nextsteps-lesson h3 {
     margin-top: 10px;
 }
